[package]
name = "async-specs-rs"
version = "0.1.0"
authors = ["Brian West <brian@bwest.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
log = "*"
shrev = "^1"
specs = { version = "^0.15", features = ["parallel", "nightly", "specs-derive"] }
